@@ -37,6 +37,14 @@ public:
   /** Output all rules to stdout */
   virtual void dump(void);
 
+  /** 
+   * Called from the folder manager when a folder is removed.
+   * Tests if the folder aFolder is used in any action. Changes 
+   * to aNewFolder folder in this case. Returns TRUE if a change
+   * occured.
+   */
+  virtual bool folderRemoved(KMFolder* aFolder, KMFolder* aNewFolder);
+
 protected:
   friend class KMFilterMgrDlg;
 
